[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
description = "RAG system for document question-answering with OCR and LLM integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Hemanth"}]
dependencies = [
    "sentence-transformers>=2.2.0",
    "qdrant-client>=1.7.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "ftfy>=6.1.0",
    "pdf2image>=1.16.0",
    "python-docx>=0.8.0",
    "PyPDF2>=3.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
]

[project.scripts]
rag = "cli:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
]
